k8s-python-app-f-b-istion/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-apps
  labels:
    istio-injection: disable # Enable automatic sidecar injection
