k8s-python-app-f-b-istion/k8s/03-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
  namespace: istio-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      serviceAccountName: backend-sa
      containers:
      - name: backend
        image: m2s-registry.osl.team/tanvir-devops/py-app-beckend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
      imagePullSecrets:
        - name: harbor-registry-secret          
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v2
  namespace: istio-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v2
  template:
    metadata:
      labels:
        app: backend
        version: v2
    spec:
      serviceAccountName: backend-sa
      containers:
      - name: backend
        image: m2s-registry.osl.team/tanvir-devops/py-app-beckend:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
      imagePullSecrets:
        - name: harbor-registry-secret
