k8s-python-app-f-b-istion/k8s/06-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  namespace: istio-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      serviceAccountName: frontend-sa
      containers:
      - name: frontend
        image: m2s-registry.osl.team/tanvir-devops/py-app-frontend-x:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      imagePullSecrets:
        - name: harbor-registry-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  namespace: istio-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v2
  template:
    metadata:
      labels:
        app: frontend
        version: v2
    spec:
      serviceAccountName: frontend-sa
      containers:
      - name: frontend
        image: m2s-registry.osl.team/tanvir-devops/py-app-frontend:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      imagePullSecrets:
        - name: harbor-registry-secret
