k8s-python-app-f-b-istion/k8s/04-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: istio-apps
spec:
  selector:
    app: backend # Selects pods with label app=backend (both v1 and v2)
  ports:
  - name: http
    port: 8000
    targetPort: 8000
