k8s-python-app-f-b-istion/k8s/05-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: istio-apps
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 5000
    targetPort: 5000
