k8s-python-app-f-b-istion/k8s/07-istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
  namespace: istio-apps
spec:
  selector:
    istio: ingress # default label for Istio's ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "exp9.osl.team" # Replace with your real domain
    tls:
      mode: SIMPLE
      credentialName: python-app-cert  # Name of the Kubernetes TLS secret
      privateKey: sds  # required field but ignored when using SDS (default)
      serverCertificate: sds  # required field but ignored when using SDS (default)

# kubectl create secret tls python-app-cert   --cert=/home/devops/osl-team/public.crt   --key=/home/devops/osl-team/private.key   -n istio-ingress
