k8s-python-app-f-b-istion/k8s/08-istio-virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: istio-apps
spec:
  hosts:
  - "exp9.osl.team"
  gateways:
  - app-gateway
  http:
  - route:
    - destination:
        host: frontend-service
        port:
          number: 5000
      # Route 75% of traffic to v1 and 25% to v2
      weight: 75
    - destination:
        host: frontend-service
        port:
          number: 5000
        subset: v2
      weight: 25
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vs
  namespace: istio-apps
spec:
  hosts:
  - backend-service.istio-apps.svc.cluster.local
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: backend-service
        subset: v1
  - match:
    - uri:
        exact: /page2
    route:
    - destination:
        host: backend-service
        subset: v1
  - route:
    - destination:
        host: backend-service
        subset: v2
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  # This must match the hostname defined in the Gateway above
  hosts:
  - "exp-kiali.osl.team"
  # This virtual service is bound to the gateway we created
  gateways:
  - trace-gateway
  http:
  - route:
    - destination:
        # This is the internal Kubernetes service for Kiali
        host: kiali.istio-system.svc.cluster.local
        port:
          # This is the port the Kiali service listens on
          number: 20001
