k8s-python-app-f-b-istion/k8s/09-istio-security.yaml
# 1. PeerAuthentication to enforce mTLS for the entire namespace
apiVersion: "security.istio.io/v1beta1"
kind: PeerAuthentication
metadata:
  name: "default"
  namespace: "istio-apps"
spec:
 mtls:
   mode: STRICT
---
# 2. DestinationRules to define subsets (v1, v2) and enable mTLS for clients
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-dr
  namespace: istio-apps
spec:
  host: frontend-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend-dr
  namespace: istio-apps
spec:
  host: backend-service
  trafficPolicy:
   tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: 
---
#apiVersion: networking.istio.io/v1alpha3
#kind: DestinationRule
#metadata:
#  name: kiali-dr
#  namespace: istio-system
#spec:
# host: kiali.istio-system.svc.cluster.local
#  trafficPolicy:
#   tls:
#     mode: ISTIO_MUTUAL
